# TP-Labo-Hyd

./: CMakeLists.txt  README.md  Text File.txt  calculhaf.cpp  calculhaf.h  imagestp_labo_hyd.qrc  io.github.hafmed.TP-Labo-Hyd.desktop  io.github.hafmed.TP-Labo-Hyd.metainfo.xml  io.github.hafmed.TP-Labo-Hyd.yaml  main.cpp  qmltp_labo_hyd.qrc  qtquickcontrols2.conf
android/: AndroidManifest.xml
qml/: Main.qml  ScopeView.qml  Screen_tp1.qml  Screen_tp2.qml  Screen_tp3.qml  Screen_tp4.qml  Screen_tp5.qml  Screen_tp6.qml  Theme.qml
qml/images/: io.github.hafmed.TP-Labo-Hyd
